tests/baselines/reference/missingFunctionImplementation2.errors.txt
tests/cases/compiler/missingFunctionImplementation2_a.ts(3,19): error TS2384: Overload signatures must all be ambient or non-ambient.
tests/cases/compiler/missingFunctionImplementation2_b.ts(1,17): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/compiler/missingFunctionImplementation2_a.ts (1 errors) ====
    export {};
    declare module "./missingFunctionImplementation2_b" {
      export function f(a, b): void;
                      ~
!!! error TS2384: Overload signatures must all be ambient or non-ambient.
    }
    
==== tests/cases/compiler/missingFunctionImplementation2_b.ts (1 errors) ====
    export function f(a?, b?);
                    ~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.